fix(widgets): further improvements for chart and card widget.

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -9,7 +9,7 @@
 }
 
 .component-body {
-    padding: 0.5rem;
+    padding: 0.75rem;
 }
 
 .chart-label {
@@ -23,4 +23,12 @@
     bottom: 50%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+h5 {
+    font-size: 1rem;
+}
+
+.pb-05 {
+    padding-bottom: 0.25rem;
 }
